--- a/packages/terra-avatar/package.json
+++ b/packages/terra-avatar/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.2.5",
     "prop-types": "^15.5.8",
     "terra-base": "^2.0.0",
+    "terra-image": "^2.1.0",
     "terra-mixins": "^1.13.0"
   },
   "scripts": {
